about us edited

--- a/1/pages/about us.html
+++ b/1/pages/about us.html
@@ -23,9 +23,9 @@
             </ul>
 </div>
 <div class="name">
-<img src="image/he1.jpg" />
+<img src="image/gallery-pic1.jpg" width="452" height="129" />
 </div>
-</div>
+<img src="image/save-earth.jpg" width="452" height="129" />
 <div id="header">
 <div id="link">
 <ul class="li-nks">
